--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -164,12 +164,23 @@
     width: 300px;
     margin: 0 auto;
   }
-  
-/*
- * ====================================================================
- * STYLE THE TEAM PAGE
- * ====================================================================
- */
+
+
+  /*
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+  // Push the service price to the left
+  .service-price {
+    left: 105px;
+  }
+
+  /*
+   * ==================================================================
+   * Team Page stuff
+   * ==================================================================
+   */
 
   // center the single team headers
   .team-copy-column h3 {
@@ -181,7 +192,5 @@
     margin:0 auto;
     width: 200px;
   }
-
-
 
 }
