--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -33,4 +33,15 @@
     color: rgba(54, 48, 48, 1);
   }
 
+  /*
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+   
+  // Push the service price to the left
+  .service-price {
+    left: 160px;
+  }
+
 }
