--- a/css-build/imports/min-width-768-max-width-991.less
+++ b/css-build/imports/min-width-768-max-width-991.less
@@ -10,4 +10,15 @@
 		margin-left: 16px;
 	}
 
+	/*
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+   
+  // Push the service price to the left
+  .service-price {
+ 	  left: 119px;
+  }
+
 }
