--- a/css-build/style.css
+++ b/css-build/style.css
@@ -336,9 +336,9 @@ ul.nav-menu .focus > ul,
   width: inherit;
 }
 /*
- * =====================================================================
+ * ====================================================================
  * End main navigation styling
- * =====================================================================
+ * ====================================================================
  */
 .homepage-row {
   margin: 0 auto 70px;
@@ -394,6 +394,10 @@ a:visited {
  * Services Page stuff
  * ====================================================================
  */
+.hide-service-title {
+  text-indent: -999px;
+  margin: 0;
+}
 .service-page-section-headers {
   font-size: 18px;
 }
@@ -411,7 +415,7 @@ a:visited {
 }
 .single-service-copy {
   display: inline-block;
-  width: 100px;
+  width: 150px;
 }
 .service-price {
   position: relative;
@@ -517,6 +521,14 @@ a:visited {
     height: 30px;
     background: #ababab;
     color: #363030;
+  }
+  /*
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+  .service-price {
+    left: 160px;
   }
 }
 @media (max-width: 767px) {
@@ -640,10 +652,18 @@ a:visited {
     margin: 0 auto;
   }
   /*
- * ====================================================================
- * STYLE THE TEAM PAGE
- * ====================================================================
- */
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+  .service-price {
+    left: 105px;
+  }
+  /*
+   * ==================================================================
+   * Team Page stuff
+   * ==================================================================
+   */
   .team-copy-column h3 {
     text-align: center;
   }
@@ -660,6 +680,14 @@ a:visited {
   }
   .home-link {
     margin-left: 16px;
+  }
+  /*
+   * ==================================================================
+   * Services Page stuff
+   * ==================================================================
+   */
+  .service-price {
+    left: 119px;
   }
 }
 /*
