update styles related to treatments

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -288,7 +288,7 @@ a {
 // Reset that to display: inline-block
 .single-service-copy {
   display: inline-block;
-  width: 150px;
+  width: 208px;
 }
 
 // Style the service price text
@@ -301,6 +301,11 @@ a {
 // Place "$" before each price
 .service-price::before { 
   content: "$";
+}
+
+// Some services have descriptions...set their font-size
+.service-description-copy {
+	font-size: 14px;
 }
 
 /*
