--- a/css-build/imports/min-width-768-max-width-991.less
+++ b/css-build/imports/min-width-768-max-width-991.less
@@ -18,7 +18,8 @@
    
   // Push the service price to the left
   .service-price {
- 	  left: 119px;
+ 	  left: 20px;
+    font-size: 15px;
   }
 
 }
