--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1476,9 +1476,10 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .service-list{padding-left:20px}
 .service-list-item{margin-bottom:20px}
 .service-section{max-width:440px;max-width:300px}
-.single-service-copy{width:150px}
+.single-service-copy{width:208px}
 .service-price{position:relative;width:auto;left:160px}
 .service-price::before{content:"$"}
+.service-description-copy{font-size:14px}
 .contact-page-test{margin-bottom:50px}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
@@ -1530,7 +1531,7 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .team-image-container{margin:0 auto;width:200px}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}
-.service-price{left:119px}}
+.service-price{left:20px;font-size:15px}}
 .frs-slideshow-container{margin:70px auto 0!important;max-width:277px!important}
 .frs-photo-column{margin-left:0}
 .wpcf7-submit{border-radius:10px;color:#fff;background:#545454;font-weight:700;padding:8px;border:none}
