--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -284,17 +284,18 @@ a {
 	  max-width: 300px;
 }
 
-// Service names/prices are in span tags that default to display: inline
-// Reset that to display: inline-block
+// Set service names/prices are in span tags to display: inline-block
+// Set their width & font-size
 .single-service-copy {
   display: inline-block;
   width: 208px;
+
+  font-size: 16px;
 }
 
 // Style the service price text
 .service-price {
   position: relative;
-  width: auto;
   left: 160px;
 }
 
