--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -173,7 +173,11 @@
    */
   // Push the service price to the left
   .service-price {
-    left: 105px;
+    left: 0;
+    position: relative;
+
+    font-weight: 900;
+    color: rgba(23, 93, 27, 100);
   }
 
   /*
