--- a/css-build/style.css
+++ b/css-build/style.css
@@ -416,10 +416,10 @@ a:visited {
 .single-service-copy {
   display: inline-block;
   width: 208px;
+  font-size: 16px;
 }
 .service-price {
   position: relative;
-  width: auto;
   left: 160px;
 }
 .service-price::before {
@@ -487,6 +487,12 @@ a:visited {
   .images-column {
     margin-left: 70px;
     width: 310px;
+  }
+  .photos-column {
+    float: left;
+  }
+  .service-price {
+    width: auto;
   }
 }
 @media (min-width: 992px) {
@@ -660,7 +666,10 @@ a:visited {
    * ==================================================================
    */
   .service-price {
-    left: 105px;
+    left: 0;
+    position: relative;
+    font-weight: 900;
+    color: #175d1b;
   }
   /*
    * ==================================================================
@@ -701,7 +710,7 @@ a:visited {
  */
 .frs-slideshow-container {
   margin: 70px auto 0 !important;
-  max-width: 277px !important;
+  max-width: 300px !important;
 }
 .frs-photo-column {
   margin-left: 0;
