--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1476,8 +1476,8 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .service-list{padding-left:20px}
 .service-list-item{margin-bottom:20px}
 .service-section{max-width:440px;max-width:300px}
-.single-service-copy{width:208px}
-.service-price{position:relative;width:auto;left:160px}
+.single-service-copy{width:208px;font-size:16px}
+.service-price{position:relative;left:160px}
 .service-price::before{content:"$"}
 .service-description-copy{font-size:14px}
 .contact-page-test{margin-bottom:50px}
@@ -1491,7 +1491,9 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .navbar{max-width:600px;left:28px}
 .home-page-info{padding-top:30px}
 .row-inner-element{margin:0}
-.images-column{margin-left:70px;width:310px}}
+.images-column{margin-left:70px;width:310px}
+.photos-column{float:left}
+.service-price{width:auto}}
 @media (min-width:992px){.col-md-6{display:inline-block;vertical-align:top}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
 .home-link{margin-left:16px}}
@@ -1527,12 +1529,12 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .site-footer{height:42px;min-width:320px;width:100%}
 .col-md-6{margin:0 auto}
 .page-copy-column{width:300px;margin:0 auto}
-.service-price{left:105px}
+.service-price{left:0;position:relative;font-weight:900;color:#175d1b}
 .team-image-container{margin:0 auto;width:200px}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}
 .service-price{left:20px;font-size:15px}}
-.frs-slideshow-container{margin:70px auto 0!important;max-width:277px!important}
+.frs-slideshow-container{margin:70px auto 0!important;max-width:300px!important}
 .frs-photo-column{margin-left:0}
 .wpcf7-submit{border-radius:10px;color:#fff;background:#545454;font-weight:700;padding:8px;border:none}
 @media (max-width:767px){.frs-photo-column{margin:0 auto}
