--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1482,6 +1482,7 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .service-description-copy{font-size:14px}
 .contact-page-test{margin-bottom:50px}
 .page-id-97 .single-service-container{margin-bottom:20px}
+.aritist-name{font-size:25px;font-weight:900}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information-element,.navbar{display:inline-block}
