--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -942,7 +942,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
 .navbar-collapse.collapse{display:block!important;height:auto!important;padding-bottom:0;overflow:visible!important}
 .navbar-collapse.in{overflow-y:visible}
 .navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.navbar-static-top .navbar-collapse{padding-right:0;padding-left:0}}
-.embed-responsive,.modal,.modal-open,.progress{overflow:hidden}
+.carousel-inner,.embed-responsive,.media,.media-body,.modal,.modal-open,.progress{overflow:hidden}
 @media (max-device-width:480px)and (orientation:landscape){.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse{max-height:200px}}
 .container-fluid>.navbar-collapse,.container-fluid>.navbar-header,.container>.navbar-collapse,.container>.navbar-header{margin-right:-15px;margin-left:-15px}
 .navbar-static-top{z-index:1000;border-width:0 0 1px}
@@ -1139,7 +1139,7 @@ to{background-position:0 0}}
 .progress-bar-danger{background-color:#d9534f}
 .media{margin-top:15px}
 .media:first-child{margin-top:0}
-.media,.media-body{overflow:hidden;zoom:1}
+.media,.media-body{zoom:1}
 .media-body{width:10000px}
 .media-right,.media>.pull-right{padding-left:10px}
 .media-left,.media>.pull-left{padding-right:10px}
@@ -1314,7 +1314,7 @@ button.close{-webkit-appearance:none;padding:0;cursor:pointer;background:0 0;bor
 .popover.bottom>.arrow:after{top:1px;margin-left:-10px;border-top-width:0;border-bottom-color:#fff}
 .popover.left>.arrow{top:50%;right:-11px;margin-top:-11px;border-right-width:0;border-left-color:#999;border-left-color:rgba(0,0,0,.25)}
 .popover.left>.arrow:after{right:1px;bottom:-10px;border-right-width:0;border-left-color:#fff}
-.carousel-inner{width:100%;overflow:hidden}
+.carousel-inner{width:100%}
 .carousel-inner>.item{position:relative;display:none;transition:.6s ease-in-out left}
 .carousel-inner>.item>a>img,.carousel-inner>.item>img{line-height:1}
 @media all and (transform-3d),(-webkit-transform-3d){.carousel-inner>.item{transition:-webkit-transform .6s ease-in-out;transition:transform .6s ease-in-out;-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-perspective:1000;perspective:1000}
@@ -1426,6 +1426,9 @@ a,a:focus,a:hover{color:#696767}
 .home .entry-title{max-width:none;border-bottom:0;text-transform:none}
 .team-row{margin-bottom:60px}
 .page-id-24 .alignnone{border:1px solid #000}
+.gallery{margin-top:30px}
+.page-id-27 .images-column{width:320px}
+.gallery-item{width:150px;float:left;margin:3px;text-align:center}
 @media (max-width:767px){.entry-title{text-align:center;text-decoration:underline;border-bottom:0;margin-bottom:30px}}
 .menu-item,.site-title{text-align:left}
 @media (min-width:768px){.entry-title{max-width:330px;border-bottom:1px solid #4c4b4b}
@@ -1482,7 +1485,7 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .service-description-copy{font-size:14px}
 .contact-page-test{margin-bottom:50px}
 .page-id-97 .single-service-container{margin-bottom:20px}
-.aritist-name{font-size:25px;font-weight:900}
+.artist-header{font-size:25px;font-weight:900;margin-bottom:0}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information-element,.navbar{display:inline-block}
