update styles related to team page

--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1486,6 +1486,7 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .contact-page-test{margin-bottom:50px}
 .page-id-97 .single-service-container{margin-bottom:20px}
 .artist-header{font-size:25px;font-weight:900;margin-bottom:0}
+.team-member-name{margin-top:0}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information-element,.navbar{display:inline-block}
