update footer/sitemap-related styles

--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -20,6 +20,7 @@ body,figure{margin:0}
 .navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.pre-scrollable{max-height:340px}
 .popover>.arrow,.popover>.arrow:after,.tooltip-arrow{width:0;height:0;border-color:transparent;border-style:solid}
 .breadcrumb,.dropdown-menu,.list-inline,.list-unstyled,.media-list,.nav,.pager{list-style:none}
+.hide-service-title,.home .entry-title,.logo,.ti{text-indent:-999px}
 html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-size:10px;-webkit-tap-highlight-color:transparent}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
@@ -941,7 +942,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
 .navbar-collapse.collapse{display:block!important;height:auto!important;padding-bottom:0;overflow:visible!important}
 .navbar-collapse.in{overflow-y:visible}
 .navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.navbar-static-top .navbar-collapse{padding-right:0;padding-left:0}}
-.embed-responsive,.modal,.modal-open,.progress{overflow:hidden}
+.carousel-inner,.embed-responsive,.media,.media-body,.modal,.modal-open,.progress{overflow:hidden}
 @media (max-device-width:480px)and (orientation:landscape){.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse{max-height:200px}}
 .container-fluid>.navbar-collapse,.container-fluid>.navbar-header,.container>.navbar-collapse,.container>.navbar-header{margin-right:-15px;margin-left:-15px}
 .navbar-static-top{z-index:1000;border-width:0 0 1px}
@@ -1138,7 +1139,7 @@ to{background-position:0 0}}
 .progress-bar-danger{background-color:#d9534f}
 .media{margin-top:15px}
 .media:first-child{margin-top:0}
-.media,.media-body{overflow:hidden;zoom:1}
+.media,.media-body{zoom:1}
 .media-body{width:10000px}
 .media-right,.media>.pull-right{padding-left:10px}
 .media-left,.media>.pull-left{padding-right:10px}
@@ -1313,7 +1314,7 @@ button.close{-webkit-appearance:none;padding:0;cursor:pointer;background:0 0;bor
 .popover.bottom>.arrow:after{top:1px;margin-left:-10px;border-top-width:0;border-bottom-color:#fff}
 .popover.left>.arrow{top:50%;right:-11px;margin-top:-11px;border-right-width:0;border-left-color:#999;border-left-color:rgba(0,0,0,.25)}
 .popover.left>.arrow:after{right:1px;bottom:-10px;border-right-width:0;border-left-color:#fff}
-.carousel-inner{width:100%;overflow:hidden}
+.carousel-inner{width:100%}
 .carousel-inner>.item{position:relative;display:none;transition:.6s ease-in-out left}
 .carousel-inner>.item>a>img,.carousel-inner>.item>img{line-height:1}
 @media all and (transform-3d),(-webkit-transform-3d){.carousel-inner>.item{transition:-webkit-transform .6s ease-in-out;transition:transform .6s ease-in-out;-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-perspective:1000;perspective:1000}
@@ -1406,11 +1407,10 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 @media print{.visible-print-inline-block{display:inline-block!important}
 .hidden-print{display:none!important}}
 .col-md-6-mixin,.home-link,.nav-menu li,.service-section,.single-service-copy{display:inline-block}
-.logo{background-size:200px 41px;width:200px;height:41px;text-indent:-999px}
+.logo{background-size:200px 41px;width:200px;height:41px}
 .facebook-image{background-size:20px 20px;width:20px;height:20px;position:absolute}
 .col-md-6-mixin{vertical-align:top}
 .hide-element{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-.ti{text-indent:-999px}
 .center{margin:0 auto}
 .z1{z-index:1}
 .z2{z-index:2}
@@ -1423,7 +1423,7 @@ a,a:focus,a:hover{color:#696767}
 .col-md-3,.col-md-6,.col-md-9 .container{padding-right:0;padding-left:0}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .entry-title{border-bottom:1px solid #4c4b4b}
-.home .entry-title{max-width:none;border-bottom:0;text-transform:none;text-indent:-999px}
+.home .entry-title{max-width:none;border-bottom:0;text-transform:none}
 .team-row{margin-bottom:60px}
 .page-id-24 .alignnone{border:1px solid #000}
 .gallery{margin-top:30px}
@@ -1450,7 +1450,7 @@ a,a:focus,a:hover{color:#696767}
 body{max-width:100%;font-family:Quicksand,sans-serif}
 .site-header{margin:0 auto}
 .navbar{margin-bottom:0}
-.site-footer{height:20px;width:100%;background-color:#ababab}
+.site-footer{height:42px;min-width:320px;width:100%;color:#fff;background-color:#ababab;font-weight:900}
 .site-footer-inner{margin:0 20px}
 .menu-item{list-style-type:none;margin-right:7px}
 .main-navigation-header{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
@@ -1472,8 +1472,9 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .facebook-link-text{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a{color:#25b8c0;text-decoration:underline}
 a:hover,a:visited{color:#25b8c0;text-decoration:none}
-.menu-item a,.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
-.hide-service-title{text-indent:-999px;margin:0}
+.menu-item a{color:#69ffff;text-decoration:none}
+.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
+.hide-service-title{margin:0}
 .product-links-header,.service-list{margin-top:50px}
 .service-page-section-headers{font-size:16px}
 .service-list{padding-left:20px}
@@ -1487,19 +1488,20 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .page-id-97 .single-service-container{margin-bottom:20px}
 .artist-header{font-size:25px;font-weight:900;margin-bottom:0}
 .team-member-name{margin-top:0}
-.page-id-353 li{list-style-type:none;text-transform:capitalize}
-@media (min-width:768px){.site{margin:0 auto}
+#post-353 li{list-style-type:none;text-transform:capitalize}
+.hours,.sitemap-link{float:right}
+.sitemap-link a{color:#fff;text-decoration:none;font-weight:bolder}
+.sitemap-link a:hover,.sitemap-link a:visited{color:#fff;text-decoration:none}
+@media (min-width:768px){.phone-number,.photos-column{float:left}
+.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information-element,.navbar{display:inline-block}
 .contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
 .contact-information-inner,.site-content,.site-footer-inner{max-width:900px;margin:0 auto}
-.phone-number{float:left}
-.hours,.sitemap-link{float:right}
 .navbar{max-width:600px;left:28px}
 .home-page-info{padding-top:30px}
 .row-inner-element{margin:0}
 .images-column{margin-left:70px;width:310px}
-.photos-column{float:left}
 .service-price{width:auto}}
 @media (min-width:992px){.col-md-6{display:inline-block;vertical-align:top}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
@@ -1533,7 +1535,6 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .entry-content{max-width:767px;margin:0 auto}
 .home .site-main{min-height:1249px}
 .home-page-info{padding:0 0 30px}
-.site-footer{height:42px;min-width:320px;width:100%}
 .col-md-6{margin:0 auto}
 .page-copy-column{width:300px;margin:0 auto}
 .service-price{left:0;position:relative;font-weight:900;color:#175d1b}
