--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -33,11 +33,16 @@ body {
 .navbar{
 	margin-bottom: 0;
 }
+
 // Style the footer
 .site-footer {
-	height: 20px;
-	width: 100%;
+  height: 42px;
+  min-width: 320px;
+  width: 100%;
+
+	color: rgba(255, 255, 255, 1);
 	background-color: rgba(171, 171, 171, 1);
+	font-weight: 900;
 }
 
 // Add side margin to the footer content
@@ -225,12 +230,8 @@ a {
 
 }
 
-
-	
-
-
 .menu-item a {
-  color: rgba(105, 103, 103, 1);
+  color: rgba(105, 255, 255, 1);
   text-decoration: none;
 
   &:hover {
@@ -366,10 +367,33 @@ a {
  * ====================================================================
  */
 
-// Globally remove margin-top from all team names
-.page-id-353 {
+// Remove bullets from <li> tags on the Sitemap page
+#post-353 {
 	li {
     list-style-type: none;
     text-transform: capitalize
+  }
+} 
+
+
+// Push hours & Sitemap link all the way right
+.hours, .sitemap-link {
+	float: right;
+}
+
+ // Style the footer link
+.sitemap-link a {
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+  font-weight: bolder;
+
+   &:hover {
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+  }
+
+  &:visited	 {
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
   }
 }
