--- a/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
+++ b/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
@@ -10,7 +10,7 @@
 // Sucks that "!important" is needed to do this, but there is no choice
 
 .frs-slideshow-container {
-  margin: 70px auto 0 !important;
+  margin: 0 auto !important;
   max-width: 300px !important;
 }
 
