--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -42,6 +42,7 @@ body {
 
 	color: rgba(255, 255, 255, 1);
 	background-color: rgba(171, 171, 171, 1);
+	font-size: 13px;
 	font-weight: 900;
 }
 
@@ -54,7 +55,6 @@ body {
 .home-link {
 	display: inline-block;
 }
-
 
 /*
 * =====================================================================
