--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -7,9 +7,10 @@
 
 // Globally set the with for all page headers
 .entry-title {
+  margin-bottom: 35px;
 
-  border-bottom: 1px solid rgba(76, 75, 75, 1);
   text-transform: uppercase;
+  font-size: 33px;
 }
 
 // Don't apply the above setting to the home page
@@ -65,7 +66,6 @@
 .gallery-item {
   width: 150px;
   float: left;
-  margin: 3px;
   text-align: center;
 }
 
@@ -74,10 +74,11 @@
 @media (max-width: 767px) {
 
   .entry-title {
+    width: 300px;
+    margin: 0 auto;
+
     text-align: center;
-    text-decoration: underline;
-    border-bottom: 0;
-    margin-bottom: 30px;
+    font-size: 34px;
   }
 
 }
@@ -88,8 +89,7 @@
 
   // Globally set the with for all page headers...
   .entry-title {
-    max-width: 330px; 
-    border-bottom: 1px solid rgba(76, 75, 75, 1);
+    width: 330px; 
   }
 
   // ...except for the haircutting & styling page because it's too big
