update team-related styles

--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -75,7 +75,7 @@
 
   .entry-title {
     width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 35px;
 
     text-align: center;
     font-size: 34px;
