push the home page invite down on handhelds

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -157,7 +157,11 @@
     width: 300px;
     margin: 0 auto;
   }
-
+  
+  //Slightly push down the invite on the home page
+  .artist-invite {
+    margin-top:50px;
+  }
 
   /*
    * ==================================================================
