--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1537,6 +1537,7 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .home-page-info{padding:0 0 30px}
 .col-md-6{margin:0 auto}
 .page-copy-column{width:300px;margin:0 auto}
+.artist-invite{margin-top:50px}
 .service-price{left:0;position:relative;font-weight:900;color:#175d1b}
 .team-image-container{margin:0 auto;width:200px;float:none;padding:0}
 .team-member-name{margin-top:10px}
