--- a/css-build/style.css
+++ b/css-build/style.css
@@ -826,9 +826,9 @@ a:visited {
   }
 }
 /*
- * =====================================================================
+ * ====================================================================
  * STYLES FOR CONTACT FORM 7
- * =====================================================================
+ * ====================================================================
  */
 .wpcf7-submit {
   border-radius: 10px;
@@ -844,5 +844,16 @@ a:visited {
   }
   .wpcf7 {
     margin-top: 40px;
+  }
+}
+/*
+ * ====================================================================
+ * STYLES FOR WORDPRESS SEO
+ * ====================================================================
+ */
+@media (max-width: 767px) {
+  .breadcrumbs {
+    width: 300px;
+    margin: 0 auto;
   }
 }
