--- a/css-build/style.less
+++ b/css-build/style.less
@@ -18,4 +18,5 @@
 @import "imports/all-transform-3d-webkit-transform-3d";
 @import "imports/min-width-768-max-width-991";
 @import "imports/PLUGIN_wp_fluid_responsive_images";
-@import "imports/PLUGIN_contact_form_7.less";
+@import "imports/PLUGIN_contact_form_7";
+@import "imports/PLUGIN_wordpress_seo";
