--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -55,7 +55,6 @@
   margin-top:30px;
 }
 
-
 .page-id-27 {
   .images-column {
     width: 320px;
@@ -66,6 +65,8 @@
 .gallery-item {
   width: 150px;
   float: left;
+
+  font-size: 15px;
   text-align: center;
 }
 
