update styles related to the lightbox links

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -213,4 +213,11 @@
     margin-top: 50px;
   }
 
+  // Links for lightbox images are acting weird
+  // Pushing up their z-indexes seems to fix it
+  a[rel*="lightbox"] {
+    .z2();
+    position: relative;
+  }
+
 }
