--- a/css-build/style.css
+++ b/css-build/style.css
@@ -776,6 +776,10 @@ a:visited {
     text-align: center;
     margin-top: 50px;
   }
+  a[rel*="lightbox"] {
+    z-index: 2;
+    position: relative;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6 {
