--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1541,7 +1541,8 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .service-price{left:0;position:relative;font-weight:900;color:#175d1b}
 .team-image-container{margin:0 auto;width:200px;float:none;padding:0}
 .team-member-name{margin-top:10px}
-.images-column{margin-top:50px}}
+.images-column{margin-top:50px}
+a[rel*=lightbox]{z-index:2;position:relative}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}
 .service-price{left:20px;font-size:15px}
