update handheld styles

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -65,8 +65,9 @@
 
 
   .menu-item {
-    font-size: 22px;
     margin: 6px 0;
+
+    font-size: 22px;
   }
 
   .menu-item a {
@@ -209,8 +210,9 @@
 
    // Center & slightly push down the page's images
   .images-column {
-    text-align: center;
     margin-top: 50px;
+
+    text-align: center;
   }
 
   // Links for lightbox images are acting weird
@@ -218,6 +220,14 @@
   a[rel*="lightbox"] {
     .z2();
     position: relative;
+  }
+   
+   // Style artist copy on the exhibits page
+  .page-id-27 .images-column {
+    clear: both;
+    padding-top: 17px;
+
+    text-align: left;
   }
 
 }
