--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1521,7 +1521,7 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .navbar{top:-51px;left:28px}
 .menu-toggle{font-weight:bolder;cursor:pointer}
 .menu-main-container{background:#4f4b4b;color:#fff;box-shadow:10px 9px 5px -5px rgba(0,0,0,.37)}
-.menu-item{font-size:22px;margin:6px 0}
+.menu-item{margin:6px 0;font-size:22px}
 .menu-item a,.menu-item a:visited{color:#fff}
 .menu-item a:hover{text-decoration:underline}
 .toggled-on .menu-toggle:after{vertical-align:2px}
@@ -1542,7 +1542,8 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .team-image-container{margin:0 auto;width:200px;float:none;padding:0}
 .team-member-name{margin-top:10px}
 .images-column{margin-top:50px}
-a[rel*=lightbox]{z-index:2;position:relative}}
+a[rel*=lightbox]{z-index:2;position:relative}
+.page-id-27 .images-column{clear:both;padding-top:17px;text-align:left}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}
 .service-price{left:20px;font-size:15px}
