--- a/css-build/style.css
+++ b/css-build/style.css
@@ -665,8 +665,8 @@ a:visited {
     box-shadow: 10px 9px 5px -5px rgba(0, 0, 0, 0.37);
   }
   .menu-item {
-    font-size: 22px;
     margin: 6px 0;
+    font-size: 22px;
   }
   .menu-item a {
     color: #ffffff;
@@ -773,12 +773,17 @@ a:visited {
    * ==================================================================
    */
   .images-column {
-    text-align: center;
     margin-top: 50px;
+    text-align: center;
   }
   a[rel*="lightbox"] {
     z-index: 2;
     position: relative;
+  }
+  .page-id-27 .images-column {
+    clear: both;
+    padding-top: 17px;
+    text-align: left;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
