--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -9,9 +9,15 @@
   .site-header {
     text-align: center;
   }
-
-  // Hide the contact header strip on mobile views
+  
+  // 
   .contact-information {
+    height: 46px;
+    text-align: center;
+  }
+
+  // Hide some of the info that appear at top of all pages on handhelds
+  .address-container {
     .hide-element();
   }
 
@@ -44,8 +50,6 @@
     top: -51px;
     left: 28px;
   }
-
-  
 
   // Style the "MENU" copy that appears on handhelds
   .menu-toggle {
