--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1473,6 +1473,9 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .facebook-link-text{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a{color:#25b8c0;text-decoration:underline}
 a:hover,a:visited{color:#25b8c0;text-decoration:none}
+a.map-link{color:#fff;text-decoration:none;padding:0 14px}
+a.map-link:hover{color:#fff;text-decoration:underline}
+a.map-link:visited{color:#fff;text-decoration:none}
 .menu-item a,.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
 .artist-invite{text-align:center}
 .hide-service-title{margin:0}
@@ -1514,7 +1517,8 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .service-price{left:160px}}
 @media (max-width:767px){.images-column,.site-header,.team-copy-column h3{text-align:center}
 .home-link{margin-left:30px}
-.contact-information{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+.contact-information{height:46px;text-align:center}
+.address-container{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .hamburger-menu{display:block;width:25px;height:4px;margin:5px 0;background:#000}
 div.nav-menu>ul,ul.nav-menu{display:none}
 .main-navigation{position:absolute;z-index:5}
