update styles related to the drop-down menu

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -261,6 +261,23 @@ a.map-link {
     color: rgba(105, 103, 103, 1);
     text-decoration: none;
   }
+}
+
+
+
+
+.sub-menu .menu-item a {
+	color: rgba(255, 255, 255, 1);
+	text-decoration: none;
+	&:hover	 {
+		color: rgba(255, 255, 255, 1);
+		text-decoration: none;
+	}
+
+	&:visited	 {
+		color: rgba(255, 255, 255, 1);
+		text-decoration: none;
+	}
 
 }
 
