--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -427,7 +427,8 @@ a.map-link {
 }
 
  // Style the footer link
-.sitemap-link a {
+.sitemap-link a,
+.instagram a {
   color: rgba(255, 255, 255, 1);
   text-decoration: none;
   font-weight: bolder;
