--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -235,4 +235,19 @@
     text-align: left;
   }
 
+  .site-footer {
+    height: 70px;
+  }
+
+  /* style the instagram link on the footer */
+  .instagram {
+    margin:8px 0;
+    display: inherit;
+  }
+
+  /* Keep the sitemap link from floating on mobile devices */
+  .sitemap-link {
+    float: none;
+  }
+
 }
