update styles related to the model page

--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -66,4 +66,13 @@
   	width: auto;
   }
 
+  .parlor-model-copy {
+    margin: 0 0 20px 20px;
+  }
+
+  /* Style the model form */
+  #wpcf7-f530-p527-o1 {
+    margin-left: 20px;
+  }
+
 }
