--- a/css-build/style.css
+++ b/css-build/style.css
@@ -609,6 +609,13 @@ a.map-link:visited {
   .service-price {
     width: auto;
   }
+  .parlor-model-copy {
+    margin: 0 0 20px 20px;
+  }
+  /* Style the model form */
+  #wpcf7-f530-p527-o1 {
+    margin-left: 20px;
+  }
 }
 @media (min-width: 992px) {
   .col-md-6 {
@@ -830,6 +837,9 @@ a.map-link:visited {
   /* Keep the sitemap link from floating on mobile devices */
   .sitemap-link {
     float: none;
+  }
+  .parlor-model-copy {
+    margin: 20px 0;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
