update styles related to the footer social networking links

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -236,11 +236,11 @@
   }
 
   .site-footer {
-    height: 70px;
+    height: 103px;
   }
 
   /* style the instagram link on the footer */
-  .instagram {
+  .social-footer-link {
     margin:8px 0;
     display: inherit;
   }
