--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -428,7 +428,7 @@ a.map-link {
 
  // Style the footer link
 .sitemap-link a,
-.instagram a {
+.social-footer-link a {
   color: rgba(255, 255, 255, 1);
   text-decoration: none;
   font-weight: bolder;
