--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1534,7 +1534,7 @@ a.map-link{color:#fff;text-decoration:none;padding:0 14px}
 a.map-link:hover{color:#fff;text-decoration:underline}
 a.map-link:visited{color:#fff;text-decoration:none}
 .menu-item a,.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
-.instagram a,.instagram a:hover,.instagram a:visited,.sitemap-link a,.sitemap-link a:hover,.sitemap-link a:visited,.sub-menu .menu-item a,.sub-menu .menu-item a:hover,.sub-menu .menu-item a:visited{color:#fff;text-decoration:none}
+.sitemap-link a:hover,.sitemap-link a:visited,.social-footer-link a:hover,.social-footer-link a:visited,.sub-menu .menu-item a,.sub-menu .menu-item a:hover,.sub-menu .menu-item a:visited{color:#fff;text-decoration:none}
 .artist-invite{text-align:center}
 .hide-service-title{margin:0}
 .product-links-header,.service-list{margin-top:50px}
@@ -1552,11 +1552,11 @@ a.map-link:visited{color:#fff;text-decoration:none}
 .team-member-name{margin-top:0}
 #post-353 li{list-style-type:none;text-transform:capitalize}
 .hours,.sitemap-link{float:right}
-.instagram a,.sitemap-link a{font-weight:bolder}
+.sitemap-link a,.social-footer-link a{color:#fff;text-decoration:none;font-weight:bolder}
 @media (min-width:768px){.phone-number,.photos-column{float:left}
 .site{margin:0 auto}
 .menu-toggle{display:none}
-.contact-information-element,.navbar{display:inline-block}
+.contact-information-element,.navbar,.social-footer-link{display:inline-block}
 .contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
 .contact-information-inner,.site-content,.site-footer-inner{max-width:900px;margin:0 auto}
 .navbar{max-width:600px;left:28px}
@@ -1566,6 +1566,7 @@ a.map-link:visited{color:#fff;text-decoration:none}
 .service-price{width:auto}
 .parlor-model-copy{margin:0 0 20px 20px}
 #wpcf7-f530-p527-o1{margin-left:20px}
+.social-footer-link{margin:0 15px}
 }
 @media (min-width:992px){.col-md-6{display:inline-block;vertical-align:top}
 }
@@ -1611,8 +1612,8 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .images-column{margin-top:50px}
 .gallery a,.home-link{z-index:2;position:relative}
 .page-id-27 .images-column{clear:both;padding-top:17px;width:290px;text-align:left}
-.site-footer{height:70px}
-.instagram{margin:8px 0;display:inherit}
+.site-footer{height:103px}
+.social-footer-link{margin:8px 0;display:inherit}
 .sitemap-link{float:none}
 .parlor-model-copy{margin:20px 0}
 }
